fixed spacing in About Me section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -311,12 +311,12 @@ body, html {
   
   .sub {
 	max-width:80%;
-	margin-right: 15%;
+	margin: 10%;
 	margin-left: 15%;
   }
   
   .subinfotext {
-	  text-align:justify;
+	  text-align:center;
   }
   
   .summarytxt {
@@ -411,7 +411,7 @@ body, html {
 	}
 
 	#AboutMe {
-	padding-top:0px;
+	padding-top:100px;
 	}
   .
 }
